# strolle

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config
bevy-strolle/: Cargo.toml
bevy-strolle/examples/: _common.rs  bench.rs  bunny.rs  cameras.rs  cornell.rs  cube.rs  cubes.rs  demo.rs  dungeon.rs  glass.rs  instancing.rs  materials.rs  minecraft.rs  models.rs  nefertiti.rs  scene.rs  stress-bvh.rs  stress-lights.rs  textures.rs
bevy-strolle/src/: camera.rs  debug.rs  event.rs  extract.rs  geometry_manager.rs  graph.rs  gui.rs  lib.rs  main_pass.rs  material.rs  queue.rs  render_node.rs  rendering_node.rs  stages.rs  state.rs  sun.rs  utils.rs
bevy-strolle/src/geometry_manager/: geometry_builder.rs
bevy-strolle/src/stages/: extract.rs  prepare.rs  queue.rs
bevy-strolle/src/state/: geometry.rs  materials.rs
strolle/: Cargo.toml  build.rs
strolle-gpu/: Cargo.toml
strolle-gpu/src/: atmosphere.rs  brdf.rs  bvh_view.rs  camera.rs  frame.rs  gbuffer.rs  geometry.rs  hit.rs  lib.rs  light.rs  lights.rs  material.rs  materials.rs  noise.rs  normal.rs  passes.rs  ray.rs  reprojection.rs  reservoir.rs  surface.rs  triangle.rs  triangles.rs  utils.rs  world.rs
strolle-gpu/src/light/: eval.rs
strolle-gpu/src/noise/: blue.rs  white.rs
strolle-gpu/src/reservoir/: di.rs  direct.rs  ephemeral.rs  gi.rs  indirect.rs  mis.rs
strolle-gpu/src/utils/: bilinear_filter.rs  f32_ext.rs  temporal_denoiser.rs  u32_ext.rs  vec2_ext.rs  vec3_ext.rs
strolle-materializer/: Cargo.toml
strolle-models/: Cargo.toml
strolle-models/src/: bvh_ptr.rs  bvh_view.rs  camera.rs  drawing_pass_params.rs  geometry_bvh_view.rs  geometry_tris_view.rs  geometry_uvs_view.rs  hit.rs  info.rs  instance.rs  instances_view.rs  lib.rs  light.rs  lights_view.rs  material.rs  materials.rs  materials_view.rs  mesh.rs  noise.rs  passes.rs  pending_voxel.rs  pending_voxel_hit.rs  pending_voxel_hits.rs  pending_voxels.rs  ray.rs  ray_op.rs  ray_ops_view.rs  ray_pass_params.rs  triangle.rs  triangles_view.rs  utils.rs  voxel.rs  voxels.rs  world.rs
strolle-pass-drawing/: Cargo.toml
strolle-pass-ray-shading/: Cargo.toml
strolle-pass-ray-tracing/: Cargo.toml
strolle-printer/: Cargo.toml
strolle-printing-pass/: Cargo.toml
strolle-raygen-pass/: Cargo.toml
strolle-raytracer-models/: Cargo.toml
strolle-shader/: Cargo.toml
strolle/examples/: cornell.rs  demo.rs  minecraft.rs  stress-bvh.rs  stress-lights.rs
strolle/src/: allocated_buffer.rs  allocated_buffers.rs  allocated_uniform.rs  buffers.rs  bvh.rs  camera.rs  camera_controller.rs  camera_controllers.rs  event.rs  event_handler.rs  geometry_bvh.rs  geometry_indexer.rs  geometry_tris.rs  geometry_uvs.rs  graph.rs  image.rs  images.rs  instance.rs  instances.rs  lib.rs  light.rs  lights.rs  material.rs  materials.rs  mesh.rs  mesh_triangle.rs  meshes.rs  noise.rs  pipelines.rs  primitive.rs  primitives.rs  rendering_node.rs  shaders.rs  stages.rs  state.rs  sun.rs  triangle.rs  triangles.rs  utils.rs  viewport.rs
strolle/src/buffers/: bind_group.rs  bindable.rs  bufferable.rs  descriptor_set.rs  double_buffered.rs  mapped_storage_buffer.rs  mapped_uniform_buffer.rs  storage_buffer.rs  texture.rs  uniform_buffer.rs  unmapped_storage_buffer.rs  utils.rs
strolle/src/bvh/: algorithms.rs  bounding_box.rs  build.rs  builder.rs  bvh_builder.rs  bvh_node.rs  bvh_object.rs  bvh_primitive.rs  bvh_printer.rs  bvh_serializer.rs  bvh_triangle.rs  mesh_bvh.rs  node.rs  nodes.rs  primitive.rs  primitives.rs  serialize.rs  serializer.rs  world_bvh.rs
strolle/src/bvh/algorithms/: lbvh.rs  sah.rs
strolle/src/bvh/algorithms/lbvh/: morton_code.rs
strolle/src/bvh/builder/: blas.rs  tlas.rs
strolle/src/bvh/builders/: lbvh.rs  sah.rs
strolle/src/camera_controller/: buffers.rs  pass.rs  passes.rs
strolle/src/camera_controller/passes/: atmosphere.rs  bvh_heatmap.rs  denoising.rs  di_resample_spatial_s0.rs  di_resample_spatial_s1.rs  di_resample_temporal.rs  di_resolve.rs  di_resolving.rs  di_sample.rs  di_sampling.rs  di_shading.rs  di_spatial_resampling.rs  di_temporal_resampling.rs  direct_denoising.rs  direct_initial_shading.rs  direct_raster.rs  direct_resolving.rs  direct_secondary_tracing.rs  direct_seeding.rs  direct_shading.rs  direct_spatial_resampling.rs  direct_temporal_resampling.rs  direct_tracing.rs  direct_validation.rs  drawing.rs  frame_compose.rs  frame_composition.rs  frame_denoise.rs  frame_denoising.rs  frame_reproject.rs  frame_reprojection.rs  gi_diff_denoising.rs  gi_diff_resolving.rs  gi_diff_spatial_resampling.rs  gi_diff_temporal_resampling.rs  gi_prepare.rs  gi_preview_resampling.rs  gi_reprojection.rs  gi_resample_spatial.rs  gi_resample_temporal.rs  (+42 more)
strolle/src/geometry_bvh/: builder.rs
strolle/src/geometry_bvh/builder/: axis.rs  bounding_box.rs  bvh.rs  bvh_node.rs  bvh_printer.rs  bvh_serializer.rs  linear_bvh.rs  node.rs  roped_bvh.rs  sah_bvh.rs  serializer.rs
strolle/src/geometry_bvh/builder/linear_bvh/: morton_code.rs
strolle/src/geometry_indexer/: axis.rs  bounding_box.rs  bvh.rs  roped_bvh.rs  serializer.rs
strolle/src/noise/: blue-noise.txt
strolle/src/pipelines/: atmosphere.rs  bvh_heatmap.rs  direct_denoising.rs  direct_raster.rs  direct_resolving.rs  direct_shading.rs  direct_spatial_resampling.rs  direct_temporal_resampling.rs  frame_composition.rs  frame_reprojection.rs  indirect_diffuse_denoising.rs  indirect_diffuse_resolving.rs  indirect_diffuse_spatial_resampling.rs  indirect_diffuse_temporal_resampling.rs  indirect_shading.rs  indirect_specular_denoising.rs  indirect_specular_resampling.rs  indirect_specular_resolving.rs  indirect_tracing.rs  reference_shading.rs  reference_tracing.rs
strolle/src/stages/: extract.rs  prepare.rs  queue.rs
strolle/src/utils/: allocator.rs  axis.rs  bounding_box.rs  interface.rs  triangle_ext.rs
strolle/src/viewport/: drawing_pass.rs  materializer_pass.rs  printer_pass.rs  printing_pass.rs  ray_shading_pass.rs  ray_tracing_pass.rs  raygen_pass.rs  shading_pass.rs  tracer_pass.rs  tracing_pass.rs
(+192 files in other folders)
