[workspace]
resolver = "2"

members = [
    "bevy-strolle",
    "strolle",
    "strolle-gpu",
    "strolle-shader-builder",
    "strolle-shaders",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[patch."crates-io"]
# TODO https://github.com/gfx-rs/naga/issues/2373
naga = { git = "https://github.com/Patryk27/naga", branch = "v0.13.0-strolle" }
