[workspace]
resolver = "2"

members = [
    "bevy-strolle",
    "strolle",
    "strolle-gpu",
    "strolle-shader-builder",
    "strolle-shaders",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[workspace.dependencies]
bevy = "0.12.1"
bevy_egui = "0.24"
bevy_mod_raycast = "0.16.0"
bevy_rapier3d = "0.23.0"
bytemuck = "1.13.1"
derivative = "2.2.0"
fxhash = "0.2.1"
glam = { version = "0.24", default-features = false }
guillotiere = "0.6.2"
humantime = "2.1.0"
image = { version = "0.24.6", default-features = false }
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
smooth-bevy-cameras = "0.10.0"
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu" }
wgpu = "0.17.2"
zip = { version = "0.6.6", default-features = false }

[patch."crates-io"]
# TODO https://github.com/gfx-rs/naga/issues/2373
naga = { git = "https://github.com/Patryk27/naga", branch = "v0.13.0-strolle" }
