[package]
name = "bevy-strolle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
log.workspace = true
strolle = { path = "../strolle", features = ["metrics"] }
wgpu.workspace = true

[dev-dependencies]
bevy = { workspace = true, features = ["jpeg"] }
bevy_mod_raycast.workspace = true
bevy_rapier3d.workspace = true
lazy_static.workspace = true
smooth-bevy-cameras.workspace = true
zip = { workspace = true, default-features = false, features = ["deflate"] }
