[package]
name = "strolle-gpu"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
glam = { workspace = true, default-features = false, features = ["bytemuck"] }
spirv-std.workspace = true

[dev-dependencies]
approx = "0.5.1"
