[package]
name = "strolle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
strolle-gpu = { path = "../strolle-gpu" }
strolle-shaders = { path = "../strolle-shaders" }

# Crates.io
bytemuck = "1.13.1"
derivative = "2.2.0"
fxhash = "0.2.1"
glam = "0.27.0"
guillotiere = "0.6.2"
humantime = { version = "2.1.0", optional = true }
image = { version = "0.24.6", default-features = false, features = ["png"] }
log = "0.4.18"
rand = "0.8.5"
spirv-std = { git = "https://github.com/glasspangolin/rust-gpu.git" }
wgpu = { version = "0.20.1", features = ["spirv"] }

[features]
metrics = ["humantime"]
