[package]
name = "strolle"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck.workspace = true
derivative.workspace = true
fxhash.workspace = true
glam.workspace = true
guillotiere.workspace = true
humantime = { workspace = true, optional = true }
image = { workspace = true, default-features = false, features = ["png"] }
log.workspace = true
rand.workspace = true
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu" }
strolle-gpu = { path = "../strolle-gpu" }
strolle-shaders = { path = "../strolle-shaders" }
wgpu = { workspace = true, features = ["spirv"] }

[features]
metrics = ["humantime"]
